--- a/src/main/webapp/VAADIN/themes/ufc/dashboard.scss
+++ b/src/main/webapp/VAADIN/themes/ufc/dashboard.scss
@@ -6,6 +6,7 @@
 @import "views/sales";
 @import "views/transactions";
 @import "views/reports";
+@import "views/users";
 
 // Optimize the CSS output
 $v-included-components: remove($v-included-components, accordion);
@@ -34,4 +35,5 @@ $valo-menu-background-color: #414B56;
   @include dashboard-sales-view;
   @include dashboard-transactions-view;
   @include dashboard-reports-view;
+  @include dashboard-users-view;
 }
