--- a/src/main/webapp/VAADIN/themes/dashboard/views/users.scss
+++ b/src/main/webapp/VAADIN/themes/dashboard/views/users.scss
@@ -5,6 +5,19 @@
       padding: $view-padding;
       border-bottom: valo-border($strength: 0.5);
     }
+
+  .gridwithpics128px .imagecol {
+    height: 200px;
+    background: white;
+    text-align: center;
+    }
+
+
+    .v-lst-event .v-grid-cell {
+     height: 200px !important;
+    }
   }
+
+
 
 }
